# Django-practice

./: .env.sample  README.md  catalog_data.json  pyproject.toml
blog/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogentry_slug.py  0003_alter_blogentry_options_and_more.py  0004_rename_is_publish_blogentry_is_published.py  0005_alter_blogentry_is_published.py
blog/templates/blog/: blogentry_confirm_delete.html  blogentry_detail.html  blogentry_form.html  blogentry_list.html
blog/templatetags/: format_path.py  format_path_to_image.py
catalog/: admin.py  apps.py  forms.py  mixins.py  models.py  services.py  signals.py  urls.py  views.py
catalog/management/commands/: delete_data_in_db.py  fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_product_creation_date_and_more.py  0003_alter_category_options_alter_category_name.py  0004_contact.py  0005_alter_contact_options_version.py  0006_alter_product_category.py  0007_product_user.py  0008_alter_product_options.py  0009_product_is_published.py
catalog/templates/catalog/: base.html  index.html  (+10 more)
catalog/templatetags/: character_limit.py
config/: settings.py  urls.py
fixtures/: blog.json  catalog.json  data.json  full_data.json  groups.json
static/styles/: blogentry_list.css  categories.css  category.css  contacts.css  global.css  index.css  orders.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py  0003_alter_user_country_alter_user_phone_number.py
utils/: send_mail.py
(+7 files in other folders)
